# analise-letras-br

./: README.md  pyproject.toml
notebooks/: Entendendo a API.ipynb  Visualização.ipynb
src/: retrieve.py  visualize.py
