[tool.poetry]
name = "src"
version = "0.1.0"
description = "Para analisar letras de artistas brasileiros e visualizá-las junto de seus álbuns de origem"
authors = ["fiuzatayna <taynafiuza2@gmail.com>"]

[tool.poetry.dependencies]
#python = "^3.8.10"
python = ">=3.8.10,<3.11"
requests = "^2.28.0"
pandas = "^1.4.2"
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"
wordcloud = "^1.8.1"
nltk = "^3.7"
matplotlib = "^3.5.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
numpy = "^1.22.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
